--- a/daikon-tql/daikon-tql-client/package.json
+++ b/daikon-tql/daikon-tql-client/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "daikon-tql-client",
-	"version": "1.0.0",
+	"name": "@talend/daikon-tql-client",
+	"version": "0.19.3-SNAPSHOT",
 	"description": "",
 	"main": "lib/index.js",
 	"scripts": {
